--- a/HTML_Practice/Practice_1_Portfolio_Card/index.html
+++ b/HTML_Practice/Practice_1_Portfolio_Card/index.html
@@ -8,10 +8,10 @@
 
 </head>
 <body>
-    <div class = "bg-gray-200 min-h-screen flex justify-center items-center">
-        <div class="border border-white rounded-[15px] flex-column text-center bg-white p-6">
-            <div><img src="face.png" alt="" class="h-[100px] w-auto rounded-[15px] translate-x-14 mt-4"></div>
-            <div class="font-bold text-20 pt-6">Parth Mishra</div>
+    <div class = "bg-gray-200 min-h-screen flex justify-center items-center" id="ramesh">
+        <div class="border border-white rounded-[15px] flex-column text-center bg-white p-6" class="suresh">
+            <div><img src="image.png" alt="" class="h-[100px] w-auto rounded-[15px] translate-x-14 mt-4"></div>
+            <h1 class="font-bold text-20 pt-6">Parth Mishra</h1>
             <div class = "text-[10px] pt-2">Frontend Developer</div>
             <p class="text-[12px] pt-2">Passionate about building clean,<br> reusable and user friendly web interfaces</p>
             <div class = " m-6 flex gap-3">
@@ -20,5 +20,10 @@
             </div>
         </div>
     </div>
+
+    <script>
+        content = document.querySelector('h1');
+        content.addEventListener('click', function (){content.style.background = 'red' ;})
+    </script>
 </body>
 </html>
